# kentus_eu

./: Cargo.toml  README.md  index.html  manifest.json
src/: game_of_life.rs  main.rs  typst_table.rs
