[package]
name = "kentusite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
leptos = { version = "0.5.1", features = ["csr"] }
leptos_router = { version = "0.5.1", features = ["csr"] }
plotters = "0.3.5"
plotters-canvas = "0.3.0"
reqwest = "0.11.22"
serde = "1.0.189"
serde_json = "1.0.107"
